@startuml
left to right direction
hide circle
hide empty members

skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 130
skinparam ranksep 150
skinparam minClassWidth 190
skinparam defaultFontName Arial

skinparam entity {
  BackgroundColor #F8F9FA
  BorderColor #343A40
  FontColor #212529
  FontSize 16
  BorderThickness 1.5
  RoundCorner 8
}

package "Nhom A: Tai khoan va dinh danh" {
  entity TaiKhoan
  entity UngVien
  entity NhaTuyenDung
  entity ThongBao
  entity PendingRegistration
  entity PendingPasswordReset
}

package "Nhom B: Doanh nghiep va tin tuyen dung" {
  entity CongTy
  entity CtCtyNganh
  entity TinTuyenDung
  entity CtKvTin
  entity KyNang
  entity ChiTietKyNangTin
}

package "Nhom C: Ho so va quy trinh ung tuyen" {
  entity HoSoCv
  entity ChiTietCv
  entity ChiTietKyNangCv
  entity DonUngTuyen
  entity LichSuTrangThai
  entity LichPhongVan
}

' Hidden links to keep 3-column layout stable and less overlapping
TaiKhoan -[hidden]right-> CongTy
CongTy -[hidden]right-> HoSoCv

' Quan he tu TaiKhoan
TaiKhoan ||--o| UngVien : "1-1"
TaiKhoan ||--o| NhaTuyenDung : "1-1"
TaiKhoan ||--o{ ThongBao : "1-N"
TaiKhoan ||--o| PendingRegistration : "1-1"
TaiKhoan ||--o| PendingPasswordReset : "1-1"
TaiKhoan ||--o{ LichSuTrangThai : "1-N"

' Cong ty, NTD, Tin
CongTy ||--o{ NhaTuyenDung : "1-N"
CongTy ||--o{ TinTuyenDung : "1-N"
CongTy ||--o{ CtCtyNganh : "1-N"
NhaTuyenDung ||--o{ TinTuyenDung : "1-N"
TinTuyenDung ||--o{ CtKvTin : "1-N"

' Tin tuyen dung va ky nang yeu cau
TinTuyenDung ||--o{ ChiTietKyNangTin : "1-N"
KyNang ||--o{ ChiTietKyNangTin : "1-N"

' Ung vien, CV, ky nang
UngVien ||--o{ HoSoCv : "1-N"
HoSoCv ||--o{ ChiTietCv : "1-N"
HoSoCv ||--o{ ChiTietKyNangCv : "1-N"
KyNang ||--o{ ChiTietKyNangCv : "1-N"

' Don ung tuyen va phong van
TinTuyenDung ||--o{ DonUngTuyen : "1-N"
HoSoCv ||--o{ DonUngTuyen : "1-N"
DonUngTuyen ||--o{ LichSuTrangThai : "1-N"
DonUngTuyen ||--o{ LichPhongVan : "1-N"
NhaTuyenDung ||--o{ LichPhongVan : "1-N"

@enduml